<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RadioGroup
        android:id="@+id/server"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/serverTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/serv"
            android:layout_marginBottom="10dp"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/RbOpcion1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/na"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/RbOpcion2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/euw"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/RbOpcion3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eune"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/RbOpcion4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lan"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/RbOpcion5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/las"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/RbOpcion6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/br"
            android:textSize="18sp" />

        <!--
             <RadioButton
            android:id="@+id/RbOpcion7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/jp" />
        -->

        <RadioButton
            android:id="@+id/RbOpcion8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ru"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/RbOpcion9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tr"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/RbOpcion10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/oce"
            android:textSize="18sp" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/lang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/langTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lang"
            android:layout_marginBottom="10dp"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/RbOpcion11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/en"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/RbOpcion12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/es"
            android:textSize="18sp"
            android:visibility="gone" />

        <RadioButton
            android:id="@+id/RbOpcion13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/it"
            android:textSize="18sp"
            android:visibility="gone" />

        <RadioButton
            android:id="@+id/RbOpcion14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/de"
            android:textSize="18sp"
            android:visibility="gone" />

        <RadioButton
            android:id="@+id/RbOpcion15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fr"
            android:textSize="18sp"
            android:visibility="gone" />

        <RadioButton
            android:id="@+id/RbOpcion16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/el"
            android:textSize="18sp"
            android:visibility="gone" />

        <RadioButton
            android:id="@+id/RbOpcion17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hu"
            android:textSize="18sp"
            android:visibility="gone" />

        <RadioButton
            android:id="@+id/RbOpcion18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pl"
            android:textSize="18sp"
            android:visibility="gone" />

        <RadioButton
            android:id="@+id/RbOpcion19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ro"
            android:textSize="18sp"
            android:visibility="gone" />

        <RadioButton
            android:id="@+id/RbOpcion110"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cs"
            android:textSize="18sp"
            android:visibility="gone" />

        <RadioButton
            android:id="@+id/RbOpcion111"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pt"
            android:textSize="18sp"
            android:visibility="gone" />

        <RadioButton
            android:id="@+id/RbOpcion112"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jp2"
            android:textSize="18sp"
            android:visibility="gone" />

        <RadioButton
            android:id="@+id/RbOpcion113"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ru2"
            android:textSize="18sp"
            android:visibility="gone" />

        <RadioButton
            android:id="@+id/RbOpcion114"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tr2"
            android:textSize="18sp"
            android:visibility="gone" />
    </RadioGroup>

    <Button
        android:id="@+id/newp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:text="@string/newp"
        android:textSize="20sp" />

    <!--
         <Button
        android:id="@+id/oldp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/newp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:text="@string/old" />
    -->

    <ImageView
        android:id="@+id/t"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_gravity="start"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:src="@drawable/twitter" />

    <ImageView
        android:id="@+id/s"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_gravity="start"
        android:layout_toRightOf="@id/t"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:src="@drawable/share" />

    <CheckBox
        android:id="@+id/chbxN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="5dp"
        android:layout_marginRight="10dp"
        android:checked="false"
        android:text="@string/not"
        android:textSize="18sp" />

</RelativeLayout>